# LeadFactory_v1

./: .coverage 2  .coverage.Charlies-Mac-mini.local.36960.XPwepPEx.wgw2  .coverage.Charlies-Mac-mini.local.36961.XwHUbDPx.wgw3  .coverage.Charlies-Mac-mini.local.36962.XTDaQyqx.wgw4  .coverage.Charlies-Mac-mini.local.36963.XErJiuqx.wgw5  .coverage.Charlies-Mac-mini.local.36964.XirZTUsx.wgw6  .coverage.Charlies-Mac-mini.local.36965.XGIZwVix.wgw7  .coverage.Charlies-Mac-mini.local.36966.XxYOPyix.wgw8  .coverage.Charlies-Mac-mini.local.36967.XvDnBmgx.wgw9  .coverage.Charlies-Mac-mini.local.37121.XaidpiEx  .coverage.Charlies-Mac-mini.local.37501.XjPvWSvx  .coverage.Charlies-Mac-mini.local.37511.XRyvUyOx  .coverage.Charlies-Mac-mini.local.37745.XJmKfAJx  .coverage.Charlies-Mac-mini.local.37795.XdQJRBWx  .coverage.Charlies-Mac-mini.local.45141.XLLnVGux.wgw0  .coverage.Charlies-Mac-mini.local.45142.XjkJFMTx.wgw1  .coverage.Charlies-Mac-mini.local.45143.XuVWNKox.wgw2  .coverage.Charlies-Mac-mini.local.45145.XduLMmLx.wgw4  .coverage.Charlies-Mac-mini.local.45160.XoStVdLx.wgw5  .coverage.Charlies-Mac-mini.local.45161.XopTJopx.wgw6  .coverage.Charlies-Mac-mini.local.45162.XPoyyXDx.wgw7  .coverage.Charlies-Mac-mini.local.45173.XXLkZqmx.wgw8  .coverage.Charlies-Mac-mini.local.45188.XnGTdBGx.wgw9  .coverage.Charlies-Mac-mini.local.45844.XjnznMXx  .coverage.Charlies-Mac-mini.local.45882.XTYOKiox  .coverage.Charlies-Mac-mini.local.46068.XweYRcMx  .coverage.Charlies-Mac-mini.local.46355.XiatJcpx  .coverage.Charlies-Mac-mini.local.6244.XUEfGlFx  .coverage.Charlies-Mac-mini.local.6284.XlSpkaFx  .coverage.Charlies-Mac-mini.local.6345.XjfnNDmx  .coverage.Charlies-Mac-mini.local.6374.XQoxrkBx  .coverage.Charlies-Mac-mini.local.6521.XEeapAMx  .coverage.Charlies-Mac-mini.local.6521.XsYgAdmx  .coverage.Charlies-Mac-mini.local.6694.XgbJzBjx.wgw0  .coverage.Charlies-Mac-mini.local.6695.XFpkPyux.wgw1  .coverage.Charlies-Mac-mini.local.6696.XiJoovax.wgw2  .coverage.Charlies-Mac-mini.local.6697.XWsrSAMx.wgw3  .coverage.Charlies-Mac-mini.local.6698.XVxyGfwx.wgw4  .coverage.Charlies-Mac-mini.local.6699.XDVsgLsx.wgw5  .coverage.Charlies-Mac-mini.local.6700.XBcKheKx.wgw6  (+337 more)
.claude/: MIGRATION_COMPLETE.md  P0-015-IMPLEMENTATION-PLAN.md  README.md  STABLE_ID_MAPPING 2.md  TRANSITION_PLAN 2.md  adaptive_intelligence_breakthrough.md  docker_performance_monitor.py  integration_agent_protocol.py  integration_recovery_report.md  integration_status 2.md  orchestration_status_update.md  orchestrator_coordination.md  orchestrator_learnings 2.md  orchestrator_learnings.md  p0_022_completion_evidence 2.md  pm_hierarchy_implementation.md  pm_hierarchy_launch.md  prp_progress.json  prp_validation_prompt.txt  settings.json  shutdown_tmux.sh  strategic_handoff_status 2.md  supertools.py  temp_prp_for_critic.md  temp_prp_for_judge.md  todo_template.md
PRPs/: P0-014-strategic-ci-test-re-enablement.md  P0-014.md
account_management/: README.md  __init__.py  api.py  auth_service.py  middleware.py  models.py  preference_api.py  preference_models.py  preference_schemas.py  schemas.py
agents/: .env.example  README.md  README_PYTHON_AGENTS.md  __init__.py  activity_dashboard.py  dashboard.py  debug_activity.py  debug_queue_issue.py  monitor_system.py  orchestrator.py  requirements.txt  simple_agent_system.py  start_agents.sh  status.py  test_actual_git_deploy.py  test_clean_queue.py  test_deployment_focused.py  test_full_workflow.py  test_integration_debug.py  test_pm_simple.py  test_pm_workflow.py  test_queue_flow.py  test_queue_logic.py  test_real_prp.py  test_real_system.py  test_simple_real.py  test_validator_fix.py  watchdog.py
alembic/: env.py
api/: __init__.py  analytics.py  audit_middleware.py  dependencies.py  dependencies_usage.md  governance.py  health.py  internal_routes.py  lineage.py  scoring_playground.py  template_studio.py
app/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
archive/: README.md
assets/: lead_value.xlsx
backlog_prps/: P0-999-example-prp.md
batch_runner/: __init__.py  api.py  cost_calculator.py  models.py  processor.py  schemas.py  websocket_manager.py
cfg/: evidence_schema 2.yaml
config/: confidence_sources.yaml  impact_coefficients.yaml  online_dependence.yaml  production.yaml  redis_queue_config 2.yaml  scoring_rules.yaml  severity_rubric.md  size_multipliers.csv
core/: __init__.py  acceptance_integration.py  auth.py  cli.py  config.py  exceptions.py  integration_validator.py  logging.py  metrics.py  observability.py  prerequisites.py  production_api.py  production_config.py  rbac.py  service_discovery.py  transition_planner.py  utils.py
coverage/: .coverage.1081c4c90747.3766.XrtSwPex  .coverage.1cd0508f6d76.2744.XCyUboBx  .coverage.1db40dc99d39.1339.XIYYVtHx  .coverage.1db40dc99d39.2436.XEDCPBLx  .coverage.1db40dc99d39.496.XOiWREZx  .coverage.1db40dc99d39.497.XwUTOnqx  .coverage.1db40dc99d39.503.XgTYLgZx  .coverage.1db40dc99d39.506.XBTgFnOx  .coverage.1db40dc99d39.509.XoAKxBfx  .coverage.1db40dc99d39.515.XXOHNMRx  .coverage.1db40dc99d39.521.XOAWtDSx  .coverage.1db40dc99d39.524.XyElnbbx  .coverage.25b36c0c013e.2304.XFSFEzbx  .coverage.25b36c0c013e.2670.XaNfABCx  .coverage.4ea2f146ae3e.501.XgBRrpkx  .coverage.584254a87b08.2261.XWvtilLx  .coverage.584254a87b08.4324.XHDSiHvx  .coverage.790e67cece8e.1984.XShPssQx  .coverage.790e67cece8e.2586.XjhrCrtx  .coverage.790e67cece8e.2587.XXUIXAYx  .coverage.797c5739177b.1424.XnUxvOOx  .coverage.797c5739177b.1433.XtUBzqDx  .coverage.797c5739177b.1436.XxOxVDAx  .coverage.797c5739177b.1443.XiOptonx  .coverage.797c5739177b.1446.XmTojqlx  .coverage.797c5739177b.1451.XqQQFuMx  .coverage.797c5739177b.1454.XeDCgeEx  .coverage.7e0698e2ee4a.2795.XXAMAnRx  .coverage.904542fc8244.4788.XaGyyBfx  .coverage.cd4e5d1cad7e.1163.XACrULvx  .coverage.cd4e5d1cad7e.1318.XlxZGyQx  .coverage.cd4e5d1cad7e.1325.XkUoDGIx  .coverage.cd4e5d1cad7e.1659.XwCdqxGx  .coverage.cd4e5d1cad7e.1712.XdalRdEx  .coverage.d7dc52b0f884.25.XldZnMrx  .coverage.f01d6f4fff84.1034.XvDlCSBx  .coverage.f01d6f4fff84.2425.XSDRSskx  (+5 more)
cron/: backup.sh  (+4 more)
(+1377 files in other folders)
